Fixed blank email in wp author

--- a/inst/rmarkdown/templates/WorkingPaper/skeleton/monashwp.tex
+++ b/inst/rmarkdown/templates/WorkingPaper/skeleton/monashwp.tex
@@ -244,8 +244,7 @@ $if(blind)$$else$\author{$for(author)$$author.othernames$ $author.familyname$$se
 $if(blind)$$else$\addresses{$for(author)$
 \textbf{$author.othernames$ $author.familyname$}\newline
 $author.address$\newline
-Email: $author.email$\newline
-$if(author.correspondingauthor)$Corresponding author$endif$\\[1cm]
+$if(author.email)${Email: $author.email$\newline}$else$$endif$$if(author.correspondingauthor)$Corresponding author$endif$\\[1cm]
 $endfor$
 }$endif$
 
