--- a/inst/rmarkdown/templates/Exam/skeleton/examtemplate.tex
+++ b/inst/rmarkdown/templates/Exam/skeleton/examtemplate.tex
@@ -241,12 +241,14 @@ $endfor$
 \titleformat{\section}[block]
   {\fontsize{12}{13}\bfseries}
   {\ifthenelse{\value{question} > 0}{\endquestion\clearpage}{}
-  \textbf{QUESTION} \addtocounter{question}{1}\arabic{question}}
+  {\sffamily\bfseries\Large\textbf{QUESTION} \addtocounter{question}{1}\arabic{question}}}
   {0.4em}{\noindent\setcounter{mks}{0}}
 \newcounter{question}
 \newcounter{mks}
 \setcounter{question}{0}
-\def\endquestion{\nopagebreak\par\nopagebreak\rightline{\textbf{[Total: \arabic{mks} marks]}}\vspace*{0.5cm}\centerline{\bf--- END OF QUESTION \arabic{question} ---}}
+\def\endquestion{\nopagebreak\par\nopagebreak\rightline{\normalsize\fbox{\sffamily\textbf{Total: \arabic{mks} marks}}}\vspace*{0.5cm}\centerline{\bfseries\sffamily--- END OF QUESTION \arabic{question} ---}}
+\titleformat{\subsection}[block]
+  {\fontsize{11}{12}\bfseries}{}{0.2em}{}
 
 % Header and Footer
 \renewcommand{\headrulewidth}{0pt}
@@ -255,7 +257,7 @@ $endfor$
 \rhead{}
 \cfoot{}
 \rfoot{\sf\textsl{Page \thepage\ of \pageref{LastPage}}}
-\def\marks#1{\par\rightline{[#1 marks]}\addtocounter{mks}{#1}}
+\def\marks#1{\par\rightline{\normalsize\fbox{\sffamily\emph{#1 marks}}}\addtocounter{mks}{#1}}
 \def\pred#1#2#3{\hat{#1}_{#2|#3}}
 
 % Redefine plain style so first page matches the rest.
@@ -308,17 +310,17 @@ $endfor$
     \vspace*{0.4cm}\par\fontsize{11}{12}\sf
     \textbf{\textit{THIS PAPER IS FOR STUDENTS STUDYING AT: (tick where applicable)}}\par
     \begin{tabular}{p{2.3cm}p{2.8cm}p{2.5cm}p{3.7cm}p{2.9cm}}
-      $if(berwick)$ \tick $else$ \Square $endif$ Berwick & 
-      $if(clayton)$ \tick $else$ \Square $endif$ Clayton & 
-      $if(malaysia)$ \tick $else$ \Square $endif$ Malaysia & 
-      \Square Off Campus Learning & 
+      $if(berwick)$ \tick $else$ \Square $endif$ Berwick &
+      $if(clayton)$ \tick $else$ \Square $endif$ Clayton &
+      $if(malaysia)$ \tick $else$ \Square $endif$ Malaysia &
+      \Square Off Campus Learning &
       \Square Open Learning\tabularnewline[0.1cm]
-      $if(caulfield)$ \tick $else$ \Square $endif$ Caulfield & 
-      \Square Gippsland & 
-      $if(peninsula)$ \tick $else$ \Square $endif$ Peninsula & 
-      \Square Monash Extension & 
+      $if(caulfield)$ \tick $else$ \Square $endif$ Caulfield &
+      \Square Gippsland &
+      $if(peninsula)$ \tick $else$ \Square $endif$ Peninsula &
+      \Square Monash Extension &
       \Square South Africa \tabularnewline[0.1cm]
-      \Square Parkville & 
+      \Square Parkville &
       \Square Other (specify)
     \end{tabular}
   \end{textblock}
@@ -334,11 +336,11 @@ $endfor$
     \underline{\textbf{AUTHORISED MATERIALS}}
 
     \begin{tabular}{lll}
-    \bfseries OPEN BOOK 
-      & $if(openbook)$ \tick $else$ \Square $endif$ YES 
+    \bfseries OPEN BOOK
+      & $if(openbook)$ \tick $else$ \Square $endif$ YES
       & $if(openbook)$ \Square $else$ \tick $endif$ NO  \\[0.5cm]
-    \bfseries CALCULATORS 
-      & $if(calculators)$ \tick $else$ \Square $endif$ YES 
+    \bfseries CALCULATORS
+      & $if(calculators)$ \tick $else$ \Square $endif$ YES
       & $if(calculators)$ \Square $else$ \tick $endif$ NO  \\
     \hspace*{0.4cm} {\footnotesize  If YES, only a HP 10bII+ calculator is permitted}\\[0.3cm]
     \bfseries SPECIFICALLY PERMITTED ITEMS  & \Square  YES & \tick NO \\
