--- a/inst/rmarkdown/templates/Letter/skeleton/monashletter.tex
+++ b/inst/rmarkdown/templates/Letter/skeleton/monashletter.tex
@@ -174,6 +174,23 @@ $endfor$
 %% MONASH STUFF
 \usepackage{monashletter}
 
+\sbox{\headname}{\parbox{10cm}{\fontsize{10}{12}\sffamily\color[gray]{0.4}
+{\large\textbf{$from$}}\\
+$fromqualifications$\\
+$fromtitle$\\[0.2cm]
+\begin{tabular}{@{}ll@{}}
+      \faicon{home}       & $fromWWW$\\
+      \faicon{envelope}   & $fromemail$\\
+      \faicon{phone}      & $fromphone$
+\end{tabular}}}
+
+\sbox{\lethdtwo}{\hbox{\fontsize{9}{11}\sffamily\color[gray]{0.4}\begin{tabular}{@{}ll@{}}
+\multicolumn{2}{@{}l}{Department of Econometrics \& Business Statistics}\\
+\multicolumn{2}{@{}l}{Monash University}\\
+\multicolumn{2}{@{}l}{Victoria 3800, Australia.}\\[0.2cm]
+\multicolumn{2}{@{}l}{ABN: 12 377 614 012\quad CRICOS Provider Number: 00008C}
+\end{tabular}}}
+
 $if(date)$
 \date{$date$}
 $else$
@@ -190,8 +207,9 @@ $endfor$
 \opening{$opening$}
 \setstretch{$spacing$}
 $body$
-\closing{$closing$\\\sig}
+\closing{$closing$\\[0.2cm]\hspace*{0.5cm}\includegraphics[height=1.5cm]{$fromsignature$}}
 \end{letter}
+
 
 $for(include-after)$
 $include-after$
