Changed default sans serif font to be bera rather than carlito

--- a/inst/rmarkdown/templates/Beamer/skeleton/MonashBlue.sty
+++ b/inst/rmarkdown/templates/Beamer/skeleton/MonashBlue.sty
@@ -64,7 +64,8 @@
 \usepackage[no-weekday]{eukdate}
 
 % A more interesting and tighter font
-\usepackage[lf,t]{carlito}
+%\usepackage[lf,t]{carlito}
+\usepackage{bera}
 
 % Square bullets and enumerated items
 \setbeamertemplate{items}[square]
