--- a/inst/rmarkdown/templates/WorkingPaper/skeleton/monashwp.sty
+++ b/inst/rmarkdown/templates/WorkingPaper/skeleton/monashwp.sty
@@ -24,8 +24,7 @@
 
 %% FONT
 \RequirePackage{mathpazo}
-\RequirePackage[lf,t]{carlito}
-
+\RequirePackage{bera}
 
 %% HEADERS AND FOOTERS
 \RequirePackage{fancyhdr}
