--- a/inst/rmarkdown/templates/Letter/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/Letter/skeleton/skeleton.Rmd
@@ -11,9 +11,7 @@ toaddress: University of Greece\newline Athens
 opening: Dear Helen
 closing: Best wishes
 spacing: 1.4
-output:
-  bookdown::pdf_document2:
-    template: monashletter.tex
+output: MonashEBSTemplates::letter
 ---
 
 I am writing to ask you to \dots
