Added workingpaper output format

--- a/inst/rmarkdown/templates/WorkingPaper/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/WorkingPaper/skeleton/skeleton.Rmd
@@ -19,8 +19,7 @@ toc: false
 bibliography: references.bib
 biblio-style: authoryear-comp
 output:
-  bookdown::pdf_document2:
-    template: monashwp.tex
+  MonashEBSTemplates::workingpaper:
     fig_caption: yes
     fig_height: 5
     fig_width: 8
