--- a/inst/rmarkdown/templates/Report/resources/monashreport.tex
+++ b/inst/rmarkdown/templates/Report/resources/monashreport.tex
@@ -98,7 +98,7 @@ $if(geometry)$
 \usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
 $else$
 \usepackage{geometry}
-\geometry{a4paper, text={16cm,24cm}}
+\geometry{a4paper, centering, text={16cm,24cm}}
 $endif$
 $if(lang)$
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
@@ -262,19 +262,13 @@ $endif$
 %\RequirePackage[section]{placeins}
 
 %% SECTION TITLES
+
+
+%% SECTION TITLES
 \RequirePackage[compact,sf,bf]{titlesec}
-\titleformat{\section}[block]
-  {\fontsize{15}{17}\bfseries\sffamily\color[rgb]{0.7,0,0}}
-  {\thesection}
-  {0.4em}{}
-\titleformat{\subsection}[block]
-  {\fontsize{12}{14}\bfseries\sffamily\color[rgb]{0.7,0,0}}
-  {\thesubsection}
-  {0.4em}{}
-\titleformat{\subsubsection}[block]
-  {\bfseries\sffamily\color[rgb]{0.7,0,0}}
-  {}
-  {0.4em}{}
+\titleformat*{\section}{\Large\sf\bfseries\color[rgb]{0.7,0,0}}
+\titleformat*{\subsection}{\large\sf\bfseries\color[rgb]{0.7,0,0}}
+\titleformat*{\subsubsection}{\sf\bfseries\color[rgb]{0.7,0,0}}
 \titlespacing{\section}{0pt}{2ex}{.5ex}
 \titlespacing{\subsection}{0pt}{1.5ex}{0ex}
 \titlespacing{\subsubsection}{0pt}{.5ex}{0ex}
