Changed ", and" to & in list of authors

--- a/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
+++ b/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
@@ -414,7 +414,10 @@ $endif$
 \makeatletter
 \DeclareDelimFormat[cbx@textcite]{nameyeardelim}{\addspace}
 \makeatother
-
+\renewcommand*{\finalnamedelim}{%
+  %\ifnumgreater{\value{liststop}}{2}{\finalandcomma}{}% there really should be no funny Oxford comma business here
+  \addspace\&\space}
+  
 
 $if(wpnumber)$
 \wp{$wpnumber$}
