--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -244,6 +244,7 @@ $endif$
 
 %% GRAPHICS
 \RequirePackage{graphicx}
+\RequirePackage{float}
 \setcounter{topnumber}{2}
 \setcounter{bottomnumber}{2}
 \setcounter{totalnumber}{4}
