Fixes to title spacing

--- a/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
+++ b/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
@@ -273,7 +273,7 @@ $endif$
   {\thesubsection}
   {0.4em}{}
 \titlespacing{\section}{0pt}{*5}{*1}
-\titlespacing{\section}{0pt}{*2}{*0.2}
+\titlespacing{\subsection}{0pt}{*2}{*0.2}
 
 
 %% TITLE PAGE
