Added $examperiod$ to exam template

--- a/inst/rmarkdown/templates/Exam/resources/examtemplate.tex
+++ b/inst/rmarkdown/templates/Exam/resources/examtemplate.tex
@@ -292,7 +292,7 @@ $endif$
  \begin{textblock}{17}(2,3)\sffamily
     \begin{center}\bfseries\Large
       $semester$\\
-      Examination Period\\[0.8cm]
+      $examperiod$\\[0.8cm]
       Faculty of Business \& Economics
     \end{center}\vspace*{0.4cm}
     \begin{tabular}{@{}p{4.5cm}p{10cm}}
