--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -358,7 +358,7 @@ $endif$
 \newenvironment{fminipage}%
 {\begin{Sbox}\begin{minipage}{\textwidth}}%
 {\end{minipage}\end{Sbox}\colorbox[gray]{0.8}{\TheSbox}}
-\flushbottom
+\raggedbottom
 
 \usepackage[australian]{babel}
 $if(date)$
