Better sf maths in memos

--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -3,7 +3,7 @@ $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
 \usepackage[sfdefault,lf,t]{carlito}
-\usepackage{sfmath}
+\usepackage[italic,eulergreek]{mathastext}
 $endif$
 \usepackage{setspace}
 
