Better handling of math fonts in memo

--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -3,6 +3,7 @@ $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
 \usepackage[sfdefault,lf,t]{carlito}
+\usepackage[cmintegrals]{newtxsf}
 \usepackage[italic,eulergreek]{mathastext}
 $endif$
 \usepackage{setspace}
