--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -2,7 +2,8 @@
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
-\usepackage[sfdefault,lf,t]{carlito}
+%\usepackage[sfdefault,lf,t]{carlito}
+\usepackage[default,tabular,lf]{sourcesanspro}
 \usepackage[cmintegrals]{newtxsf}
 \usepackage[italic,eulergreek]{mathastext}
 $endif$
