Updated exam cover page

--- a/inst/rmarkdown/templates/Exam/resources/examtemplate.tex
+++ b/inst/rmarkdown/templates/Exam/resources/examtemplate.tex
@@ -303,28 +303,26 @@ $endif$
     \end{tabular}
     \vspace*{0.4cm}\par\fontsize{10}{11}\sf
     \textbf{\textit{THIS PAPER IS FOR STUDENTS STUDYING AT: (tick where applicable)}}\par
-    \begin{tabular}{p{2.3cm}p{2.8cm}p{2.5cm}p{3.7cm}p{2.9cm}}
-      $if(berwick)$ \tick $else$ \Square $endif$ Berwick &
-      $if(clayton)$ \tick $else$ \Square $endif$ Clayton &
-      $if(malaysia)$ \tick $else$ \Square $endif$ Malaysia &
-      \Square Off Campus Learning &
-      \Square Open Learning\tabularnewline[0.1cm]
+    \begin{tabular}{llll}
       $if(caulfield)$ \tick $else$ \Square $endif$ Caulfield &
-      \Square Gippsland &
-      $if(peninsula)$ \tick $else$ \Square $endif$ Peninsula &
-      \Square Monash Extension &
-      \Square South Africa \tabularnewline[0.1cm]
+      $if(clayton)$ \tick $else$ \Square $endif$ Clayton &
       \Square Parkville &
+      $if(peninsula)$ \tick $else$ \Square $endif$ Peninsula \tabularnewline[0.1cm]
+      \Square Monash Extension &
+      \Square Off Campus Learning &
+      \Square Malaysia &
+      \Square South Africa \tabularnewline[0.1cm]
       \Square Other (specify)
     \end{tabular}
   \end{textblock}
   \begin{textblock}{17}(2,13.2)\fontsize{10}{11}\sf\raggedright
-    During an exam, you must not have in your possession any item/material that has not been authorised for your exam. This includes books, notes, paper, electronic device/s, mobile phone, smart watch/device, calculator, pencil case, or writing on any part of your body.  Any authorised items are listed below.\break
-    Items/materials on your desk, chair, in your clothing or otherwise on your person will be deemed to be in your possession. 
+  During an exam, you must not have in your possession any item/material that has not been authorised for your exam. This includes books, notes, paper, electronic device/s, mobile phone, smart watch/device, calculator, pencil case, or writing on any part of your body. Any authorised items are listed below. Items/materials on your desk, chair, in your clothing or otherwise on your person will be deemed to be in your possession.
 
     \textbf{No examination materials are to be removed from the room.} This includes retaining, copying, memorising or noting down content of exam material for personal use or to share with any other person by any means following your exam.
 
-    Failure to comply with the above instructions, or attempting to cheat or cheating in an exam is a discipline offence under Part 7 of the Monash University (Council) Regulations.
+    Failure to comply with the above instructions, or attempting to cheat or cheating in an exam is a discipline
+offence under Part 7 of the Monash University (Council) Regulations, or a breach of instructions under Part
+3 of the Monash University (Academic Board) Regulations.
   \end{textblock}
   \begin{textblock}{17}(2,17.7)\fontsize{10}{11}\sf
     \underline{\textbf{AUTHORISED MATERIALS}}
@@ -336,7 +334,7 @@ $endif$
     \bfseries CALCULATORS
       & $if(calculators)$ \tick $else$ \Square $endif$ YES
       & $if(calculators)$ \Square $else$ \tick $endif$ NO  \\
-    \hspace*{0.4cm} {\footnotesize  If YES, only a HP 10bII+ calculator is permitted}\\[0.3cm]
+    \hspace*{0.4cm} {\footnotesize  Only HP 10bII+ or Casio FX82 (any suffix) calculator permitted}\\[0.3cm]
     \bfseries SPECIFICALLY PERMITTED ITEMS  & \Square  YES & \tick NO \\
     \textbf{if yes, items permitted are:  }
     \end{tabular}
