Load fancybox before fancyvrb and remove redundant color load

--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -69,6 +69,7 @@ $endif$
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
 \PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
+\usepackage{fancybox}
 $if(verbatim-in-note)$
 \usepackage{fancyvrb}
 $endif$
@@ -336,7 +337,6 @@ $endif$
   \addspace\&\space}
 
 %%% Change title format
-\usepackage{fancybox,color}
 \usepackage[absolute,overlay]{textpos}
 \setlength{\TPHorizModule}{1cm}
 \setlength{\TPVertModule}{1cm}
