--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -342,6 +342,8 @@ $endif$
 \setlength{\TPVertModule}{1cm}
 \usepackage{titling}
 
+\usepackage{framed}
+
 \pretitle{%
 $if(branding)$%
 \begin{textblock}{4}(2,0.8)\includegraphics[height=1.5cm]{monash2}\end{textblock}%
