--- a/inst/rmarkdown/templates/WorkingPaper/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/WorkingPaper/skeleton/skeleton.Rmd
@@ -6,9 +6,11 @@ author:
   address: University of Paris
   email: mcurie.notreal@gmail.com
   correspondingauthor: true
+  qualifications: Nobel Prize, PhD
 - familyname: Curie
   othernames: Pierre
   address: University of Paris
+  qualifications: Nobel Prize, PhD
 abstract: "A brief summary of our ideas"
 keywords: "blah, blah"
 wpnumber: no/yr
