Add \newpage for table of content

--- a/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
+++ b/inst/rmarkdown/templates/WorkingPaper/resources/monashwp.tex
@@ -480,6 +480,7 @@ $include-before$
 $endfor$
 $if(toc)$
 {
+\newpage
 $if(colorlinks)$
 \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}
 $endif$
@@ -488,6 +489,7 @@ $endif$
 }
 $endif$
 $if(lot)$
+\newpage
 \listoftables
 $endif$
 $if(lof)$
