--- a/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
+++ b/inst/rmarkdown/templates/Memo/resources/monashmemo.tex
@@ -346,9 +346,9 @@ $endif$
 $if(branding)$%
 \begin{textblock}{4}(2,0.8)\includegraphics[height=1.5cm]{monash2}\end{textblock}%
 \begin{textblock}{4}(16.5,0.8)\includegraphics[trim=53 0 0 0, clip=true,height=1.5cm]{MBSPortrait}\end{textblock}%
-\vspace*{-1.15cm}
+\vspace*{-.8cm}
 $else$
-\vspace*{-1cm}
+\vspace*{-1.2cm}
 $endif$
 \LARGE\bfseries}
 \posttitle{\vspace*{0.3cm}\par}
